@@ -168,6 +168,7 @@ Version 1.13.0-dev:
    * Fix bug #21397 Reloading may cause a side's turn is not initalized.
      This bug affected only networked mp, at least since version 1.8.
    * [modify_side] may now alter the value of [side] defeat_condition.
+   * Fix bug #22116: unlock movement when attacking enemy+discovering in fog
 
 Version 1.11.11:
  * Add-ons server:
